<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:orientation="vertical"
    tools:context="org.photon.fooddeliverymobil.activity.LoginActivity">


    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:background="#E61E2C"
        >

        <TextView
            android:id="@+id/txtHeader"
            android:clickable="true"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="FoodDelivery Mobil"
            android:layout_centerVertical="true"
            android:textStyle="bold"
            android:layout_marginLeft="25dp"
            android:textSize="23sp"
            android:textColor="@android:color/white"
            android:shadowColor="@android:color/black"

            />
    </RelativeLayout>

    <TextView
        android:id="@+id/activity_login_txtMailAddress"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textColor="@android:color/white"
        android:shadowColor="@android:color/holo_red_dark"
android:text="@string/prompt_email"
        android:textSize="22sp"
        android:layout_marginTop="100dp"
        android:layout_marginLeft="30dp"
        />

    <EditText
        android:layout_below="@+id/activity_login_txtMailAddress"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:inputType="textEmailAddress"
        android:ems="20"
        android:maxLength="20"
        android:singleLine="true"
        android:maxLines="1"
        android:lines="1"
        android:layout_marginTop="25dp"
        android:layout_marginLeft="30dp"
        android:layout_marginRight="30dp"
        android:id="@+id/activity_login_mail_editText"
        android:hint="@string/enter_email"
        android:textColor="@color/editHint"
        />
    <TextView
        android:layout_below="@+id/activity_login_mail_editText"
        android:id="@+id/activity_login_txtPassword"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textColor="@android:color/white"
        android:shadowColor="@android:color/holo_red_dark"
        android:text="@string/prompt_password"
        android:textSize="22sp"
                android:layout_marginTop="30dp"
        android:layout_marginLeft="30dp"

        />

    <EditText
        android:layout_below="@+id/activity_login_txtPassword"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:inputType="textPassword"
        android:ems="20"
        android:layout_marginTop="25dp"
        android:layout_marginLeft="30dp"
        android:layout_marginRight="30dp"
        android:id="@+id/activity_login_password_editText"
        android:textColor="@color/editHint"
        android:maxLength="20"
        android:singleLine="true"
        android:maxLines="1"
        android:lines="1"
        android:hint="@string/enter_password"/>

    <Button
        android:id="@+id/activity_login_button"
        android:layout_width="125dp"
        android:layout_height="wrap_content"
        android:layout_marginLeft="0dp"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        android:text="Login"
        android:layout_marginBottom="75dp"
        android:textSize="20sp"
        />

</RelativeLayout>
