<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="org.photon.fooddeliverymobil.activity.ProductActivity">
    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:background="#E61E2C"
        android:id="@+id/product_activity_header"
        >

        <TextView
            android:id="@+id/product_activity_txtHeader"
            android:clickable="true"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/product_header"
            android:layout_centerVertical="true"
            android:textStyle="bold"
            android:layout_marginLeft="25dp"
            android:textSize="23sp"
            android:textColor="@android:color/white"
            android:shadowColor="@android:color/black"

            />
    </RelativeLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_below="@+id/product_activity_header"
        android:layout_margin="10dp"
        android:orientation="vertical"
        android:weightSum="10"
        >

        <ListView
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:id="@+id/product_activity_listView"
            android:layout_weight="9"
            android:layout_margin="15dp"/>

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1"

            >

<TextView
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:id="@+id/product_activity_total_textView"
    android:text="@string/total"
    android:layout_alignParentLeft="true"
    android:layout_centerVertical="true"
    android:textSize="20sp"
    android:textColor="@android:color/white"
    android:shadowColor="@android:color/holo_red_dark"
    />
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/product_activity_total_price_textView"
                android:text="@string/current_price"
               android:layout_toRightOf="@+id/product_activity_total_textView"
                android:layout_centerVertical="true"
                android:textSize="20sp"
                android:textColor="@android:color/white"
                android:shadowColor="@android:color/holo_red_dark"
                />
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                               android:text=" TL "
                android:layout_toRightOf="@+id/product_activity_total_price_textView"
                android:layout_centerVertical="true"
                android:textSize="20sp"
                android:textColor="@android:color/white"
                android:shadowColor="@android:color/holo_red_dark"
                />

            <Button
                android:id="@+id/product_activity_button"
                android:layout_width="120dp"
                android:layout_height="match_parent"
android:layout_alignParentRight="true"

                android:text="@string/product_button"
                android:layout_gravity="right"
                android:textColor="@android:color/white"
                android:textSize="19sp"
                />

        </RelativeLayout>



    </LinearLayout>

</RelativeLayout>
